--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   >
     <!-- Add your site or application content here -->
     <div
-      class="w-[21rem] h-[26rem] bg-white rounded-lg shadow-md flex flex-col justify-center items-center gap-4 p-2 text-center border border-neutral-900"
+      class="w-[21rem] h-[26rem] bg-white rounded-lg shadow-md flex flex-col justify-center items-center gap-4 p-2 text-center"
     >
       <img src="./img//profile.png" class="w-16 h-16" />
       <div>
